alert nas logos

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,9 +3,9 @@
         <h1>Wesley Lima</h1>
     </div>
     <div class="social_medias">
-        <a href=""><i class="ph ph-linkedin-logo linkedin"></i></a>
-        <a href=""><i class="ph ph-github-logo github"></i></a>
-        <a href=""><i class="ph ph-at email"></i></a>
+        <a class="logos" (click)="alertMessage()"><i class="ph ph-linkedin-logo linkedin"></i></a>
+        <a class="logos" (click)="alertMessage()"><i class="ph ph-github-logo github"></i></a>
+        <a class="logos" (click)="alertMessage()"><i class="ph ph-at email"></i></a>
     </div>
 </header>
 <div class="line"></div>
