Novo fundo, footer header, e typing effect..

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,18 +1,25 @@
-<header class="header">
-    <div class="name_logo">
-        <h1>Wesley Lima</h1>
-    </div>
-    <div class="social_medias">
-        <a class="logos" (click)="alertMessage()"><i class="ph ph-linkedin-logo linkedin"></i></a>
-        <a class="logos" (click)="alertMessage()"><i class="ph ph-github-logo github"></i></a>
-        <a class="logos" (click)="alertMessage()"><i class="ph ph-at email"></i></a>
-    </div>
-</header>
-<div class="line"></div>
+<body class="container">
+    <header>
+        <div class="name_logo">
+            <h1>Wesley Lima</h1>
+        </div>
+        <div class="social_medias">
+            <a class="logos" (click)="alertMessage()"><i class="ph ph-linkedin-logo linkedin"></i></a>
+            <a class="logos" (click)="alertMessage()"><i class="ph ph-github-logo github"></i></a>
+            <a class="logos" (click)="alertMessage()"><i class="ph ph-at email"></i></a>
+        </div>
+    </header>
+    <section>
+        <div>
+            <h2 class="msg">Hi There! </h2>
 
-<body>
-    <span class="inprogress">Em progresso....</span>
-    <section class="container">
-        <img src="assets/progress.svg" alt="Imagem em contrução" class="image">
+
+            <h2 class="msg2"><span>I'm </span> <span class="span"></span></h2>
+
+
+        </div>
+        <div>
+            <!-- <h2 class="msg2">I'm <span class="tw">Front-End Developer</span> </h2> -->
+        </div>
     </section>
 </body>
