--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,38 +1,97 @@
-* {
-    margin: 0;
-    padding: 0;
-    font-family: 'Montserrat', sans-serif;
-}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;800&display=swap');
+// body {
+//     position: fixed;
+//     left: 0;
+//     padding: 0;
+//     margin: 0;
+//     width: 100%;
+//     height: 100%;
+//     background-image: url('../../../assets/fundo.jpg');
+//     background-size: cover;
+//     background-repeat: no-repeat;
+//     overflow: hidden;
+// }
 
-.header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+* {
+    font-family: 'Poppins', sans-serif;
 }
 
 .container {
-    padding: 10px;
-    background-color: grey;
+    position: relative;
+}
+
+.container::before {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    margin: 0;
+    overflow: hidden;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('../../../assets/fundo.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    opacity: 0.75;
+    // filter: blur(0.2rem);
+    /* Valor do desfoque, ajuste conforme necessário */
+    z-index: -1;
+}
+
+section {
+    color: white;
+    position: relative;
+    padding-top: 200px;
+    width: 850px;
+    padding: 15px;
+    border-radius: 10px;
     margin: auto;
-    width: 500px;
+}
+
+.msg {
+    text-align: center;
+    font-size: 70px;
+}
+
+.msg2 {
+    text-align: center;
+    font-size: 70px;
+}
+
+.span {
+    color: aquamarine;
+}
+
+// .container {
+
+//     top: 8rem;
+//     padding-top: 200px;
+//     padding: 10px;
+//     background-color: white;
+//     margin: auto;
+//     width: 31.25rem;
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     border: 2px solid black;
+//     border-radius: 25px;
+// }
+
+header {
+    bottom: 0;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 0;
+    margin: 0;
     display: flex;
     align-items: center;
-    justify-content: center;
-    border: 2px solid black;
-    border-radius: 25px;
-}
-
-a {
-    color: inherit;
-    text-decoration: none;
-}
-
-.line {
-    border-top: 1px solid black;
-    margin-top: 0.6rem;
+    justify-content: space-around;
 }
 
 .social_medias {
+    color: white;
     padding-right: 5em;
     display: flex;
     justify-content: flex-end;
@@ -40,6 +99,7 @@ a {
 }
 
 .name_logo {
+    color: white;
     padding-left: 5em;
     margin-right: 20px;
     font-weight: bold;
@@ -52,18 +112,13 @@ a {
     font-size: 3.75rem;
 }
 
-.image {
-    width: 31rem;
-}
-
-.inprogress {
-    padding: 25px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 3.1rem;
-}
-
 .logos:hover {
+    color: #186BBD;
     cursor: pointer;
+}
+
+@keyframes caret {
+    50% {
+        border-color: transparent;
+    }
 }
