--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,25 +1,61 @@
-<body class="container">
-    <header>
-        <div class="name_logo">
-            <h1>Wesley Lima</h1>
-        </div>
-        <div class="social_medias">
-            <a class="logos"><i class="ph ph-linkedin-logo linkedin"></i></a>
-            <a class="logos" ><i class="ph ph-github-logo github"></i></a>
-            <a class="logos"><i class="ph ph-at email"></i></a>
-        </div>
-    </header>
-    <section>
-        <div>
-            <h2 class="msg">Hi There! </h2>
+<body>
+  <header>
+    <div class="name_logo">
+      <!-- <h1>Wesley Lima</h1> -->
+    </div>
+    <div class="header-components">
+      <div >
+        <a class="header-text1" routerLink="/about">Sobre mim </a>
+      </div>
+      <div class="header-text2">
+        <a>Projetos</a>
+      </div>
+      <div class="form-check form-switch" (click)="onChangeToggle()">
+        <input
+          class="form-check-input bg-dark"
+          type="checkbox"
+          role="switch"
+          id="flexSwitchCheckDefault"
+        />
+      </div>
+    </div>
 
-              <div style="display: flex; justify-content: center; -webkit-text-stroke: 1px black; font-size: 1.4em">
-                <h2>I'm </h2> <h2 style="padding-left: .4em;">{{ nomeMotrar.length ? nomeMotrar : palavrasMotrar }}</h2>
-              </div>
-
-        </div>
+    <!-- <a class="logos"><i class="ph ph-at email"></i></a> -->
+  </header>
+  <section>
+    <div>
+      <h2 class="msg">Olá!</h2>
+      <div
+        style="
+          display: flex;
+          justify-content: center;
+          flex-direction: column;
+          text-align: center;
+          margin-top: 5em;
+        "
+      >
         <div>
-            <!-- <h2 class="msg2">I'm <span class="tw">Front-End Developer</span> </h2> -->
+          <h2>Eu sou</h2>
         </div>
-    </section>
+        <div style="-webkit-text-stroke: 1px black; font-size: 1.4em; background: linear-gradient(89.81deg, #9845E8 -1.72%, #33D2FF 54.05%, #DD5789 99.78%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
+        font-weight: 600;">
+          <h2>
+            {{nomeMotrar.length ? nomeMotrar : palavrasMotrar ? palavrasMotrar : "&nbsp;"}}
+          </h2>
+        </div>
+      </div>
+    </div>
+    <div>
+      <!-- <h2 class="msg2">I'm <span class="tw">Front-End Developer</span> </h2> -->
+    </div>
+  </section>
+  <div class="social_medias">
+    <button class="buttonLinkedin"> <a class="logos"><i class="ph ph-linkedin-logo linkedin"></i></a></button>
+    <button class="buttonGithub"> <a class="logos"><i class="ph ph-github-logo github"></i></a></button>
+   <button class="buttonEmail"> <a class="logos"><i class="ph ph-at email"></i></a></button>
+
+  </div>
 </body>
