--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,187 +1,128 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;800&display=swap');
-// body {
-//     position: fixed;
-//     left: 0;
-//     padding: 0;
-//     margin: 0;
-//     width: 100%;
-//     height: 100%;
-//     background-image: url('../../../assets/fundo.jpg');
-//     background-size: cover;
-//     background-repeat: no-repeat;
-//     overflow: hidden;
-// }
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;800&display=swap");
 
 * {
-    font-family: 'Poppins', sans-serif;
-}
-
-.container {
-    position: relative;
-}
-
-.h1 {
-  max-width: 480px;
-  text-align: center;
-  margin: 60px auto;
-  font-family: 'Courier New', Courier, monospace;
-  color: #fff;
-  font-size: 20px;
-}
-
-.h1::after {
-  content: '|';
-  opacity: 1;
-  margin-left: 5px;
-  display: inline-block;
-  animation: blink .7s infinite;
-}
-
-@keyframes blink {
-  0%, 100% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 0;
-  }
-}
-
-.container::before {
-    content: '';
-    position: fixed;
-    top: 0;
-    left: 0;
-    margin: 0;
-    overflow: hidden;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url('../../../assets/fundo.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    opacity: 0.75;
-    // filter: blur(0.2rem);
-    /* Valor do desfoque, ajuste conforme necessário */
-    z-index: -1;
+  font-family: "Poppins", sans-serif;
 }
 
 section {
-    color: white;
-    position: relative;
-    padding-top: 200px;
-    width: 850px;
-    padding: 15px;
-    border-radius: 10px;
-    margin: auto;
+  color: white;
+  position: relative;
+  padding-top: 200px;
+  width: 850px;
+  padding: 15px;
+  border-radius: 10px;
+  margin: auto;
 }
 
 .msg {
-    text-align: center;
-    font-size: 70px;
+  text-align: center;
+  font-size: 70px;
 }
 
 .msg2 {
-    text-align: center;
-    font-size: 70px;
+  text-align: center;
+  font-size: 70px;
 }
 
 .span {
-    color: aquamarine;
-}
-
-// .container {
-
-//     top: 8rem;
-//     padding-top: 200px;
-//     padding: 10px;
-//     background-color: white;
-//     margin: auto;
-//     width: 31.25rem;
-//     display: flex;
-//     align-items: center;
-//     justify-content: center;
-//     border: 2px solid black;
-//     border-radius: 25px;
-// }
-
-header {
-    bottom: 0;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+  color: aquamarine;
 }
 
 .social_medias {
-    color: white;
-    padding-right: 5em;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
+  color: white;
+  display: flex;
+  justify-content: center;
+  padding-top: 150px;
+  column-gap: 2rem
 }
 
 .name_logo {
-    color: white;
-    padding-left: 5em;
-    margin-right: 20px;
-    font-weight: bold;
-}
-
-.con {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.con p {
-  font-size: 3rem;
-  padding: 0.5rem;
+  color: white;
+  padding-left: 5em;
+  margin-right: 20px;
   font-weight: bold;
-  letter-spacing: 0.1rem;
-  text-align: center;
-  overflow: hidden;
-}
-.con p span.typed-text {
-  font-weight: normal;
-  color: #dd7732;
-}
-.con p span.cursor {
-  display: inline-block;
-  background-color: #ccc;
-  margin-left: 0.1rem;
-  width: 3px;
-  animation: blink 1s infinite;
-}
-.con p span.cursor.typing {
-  animation: none;
-}
-@keyframes blink {
-  0%  { background-color: #ccc; }
-  49% { background-color: #ccc; }
-  50% { background-color: transparent; }
-  99% { background-color: transparent; }
-  100%  { background-color: #ccc; }
 }
 
 .linkedin,
 .github,
 .email {
-    padding-left: 0.7em;
-    font-size: 3.75rem;
+  padding-left: 0.7em;
+  font-size: 3.75rem;
 }
 
 .logos:hover {
-    color: #186BBD;
-    cursor: pointer;
+  color: #186bbd;
+  cursor: pointer;
 }
 
-@keyframes caret {
-    50% {
-        border-color: transparent;
-    }
+.logos {
+  padding-right: 50px;
+  text-decoration: none;
+  color: white;
 }
 
+.header-components {
+  cursor: pointer;
+  padding-right: 50px;
+  color: white;
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 2em;
+}
+
+.header-text1,
+.header-text2 {
+  padding-right: 50px;
+  text-decoration: none;
+  color: white;
+}
+
+.header-text1:hover,
+.header-text2:hover {
+  color: black;
+}
+
+.buttonLinkedin {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent;
+  border: 1px solid black;
+  border-radius: 20px;
+}
+
+.buttonGithub {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent;
+  border: 1px solid black;
+  border-radius: 20px;
+}
+
+.buttonEmail {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent;
+  border: 1px solid black;
+  border-radius: 20px;
+}
+
+.buttonLinkedin:hover {
+  border: 1px solid white;
+  border-radius: 20px;
+  cursor: pointer;
+}
+
+.buttonGithub:hover {
+  border: 1px solid white;
+  border-radius: 20px;
+  cursor: pointer;
+}
+
+.buttonEmail:hover {
+  border: 1px solid white;
+  border-radius: 20px;
+  cursor: pointer;
+}
