--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  background-color: #272727!important;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+}
