removing the / from href

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="header-components">
       <div >
-        <a class="header-text1" routerLink="/about">Sobre mim </a>
+        <a class="header-text1" routerLink="about">Sobre mim </a>
       </div>
       <div class="header-text2">
         <a>Projetos</a>
