começando about me, header global

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,1 +1,22 @@
-<p>about works!</p>
+<div class="container">
+  <div>
+    <span class="welcome"
+      >Meu nome é Wesley, tenho 22 anos e sou
+      <span class="tech">Desenvolvedor Front-End</span></span
+    >
+  </div>
+
+  <div>
+    <span class="welcome">
+      Atualmente, as tencnologias que utilizo é <span class="tech">Angular</span> e
+      <span class="tech">Flutter</span>. Também tenho conhecimento em: <br>
+    </span>
+    <br><br>
+    <span class="tech">->&nbsp;</span><span class="welcome">HTML</span> <br>
+    <span class="tech">->&nbsp;</span><span class="welcome">CSS</span> <br>
+    <span class="tech">->&nbsp;</span><span class="welcome">Javascript</span> <br>
+    <span class="tech">->&nbsp;</span><span class="welcome">Typescript</span> <br>
+    <span class="tech">->&nbsp;</span><span class="welcome">MySQL</span> <br>
+    <span class="tech">->&nbsp;</span><span class="welcome">Git</span>
+  </div>
+</div>
