--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,27 +1,4 @@
 <body>
-  <header>
-    <div class="name_logo">
-      <!-- <h1>Wesley Lima</h1> -->
-    </div>
-    <div class="header-components">
-      <div >
-        <a class="header-text1" routerLink="about">Sobre mim </a>
-      </div>
-      <div class="header-text2">
-        <a>Projetos</a>
-      </div>
-      <div class="form-check form-switch" (click)="onChangeToggle()">
-        <input
-          class="form-check-input bg-dark"
-          type="checkbox"
-          role="switch"
-          id="flexSwitchCheckDefault"
-        />
-      </div>
-    </div>
-
-    <!-- <a class="logos"><i class="ph ph-at email"></i></a> -->
-  </header>
   <section>
     <div>
       <h2 class="msg">Olá!</h2>
@@ -53,9 +30,9 @@
     </div>
   </section>
   <div class="social_medias">
-    <button class="buttonLinkedin"> <a class="logos"><i class="ph ph-linkedin-logo linkedin"></i></a></button>
-    <button class="buttonGithub"> <a class="logos"><i class="ph ph-github-logo github"></i></a></button>
-   <button class="buttonEmail"> <a class="logos"><i class="ph ph-at email"></i></a></button>
+    <button class="buttonLinkedin"> <a class="logos" href="https://www.linkedin.com/in/weesleylima/" target="_blank"><i class="ph ph-linkedin-logo linkedin"></i></a></button>
+    <button class="buttonGithub"> <a class="logos" href="https://github.com/weesleycabral" target="_blank"><i class="ph ph-github-logo github"></i></a></button>
+   <button class="buttonEmail"> <a class="logos" href="mailto:weesleylima@hotmail.com"><i class="ph ph-at email"></i></a></button>
 
   </div>
 </body>
