home na header, remoção textos pagina principal

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -8,7 +8,7 @@
 
   <div>
     <span class="welcome">
-      Atualmente, as tencnologias que utilizo é <span class="tech">Angular</span> e
+      Atualmente, as tecnologias que utilizo é <span class="tech">Angular</span> e
       <span class="tech">Flutter</span>. Também tenho conhecimento em: <br>
     </span>
     <br><br>
