--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -2,7 +2,11 @@
   <div class="name_logo">
     <!-- <h1>Wesley Lima</h1> -->
   </div>
+
   <div class="header-components">
+    <div class="home">
+      <a class="header-text3" routerLink="">Home</a>
+    </div>
     <div >
       <a class="header-text1" routerLink="about">Sobre mim </a>
     </div>
