--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <body>
   <section>
     <div>
-      <h2 class="msg">Olá!</h2>
+      <!-- <h2 class="msg">Olá!</h2> -->
       <div
         style="
           display: flex;
@@ -12,7 +12,7 @@
         "
       >
         <div>
-          <h2>Eu sou</h2>
+          <!-- <h2>Eu sou</h2> -->
         </div>
         <div style="-webkit-text-stroke: 1px black; font-size: 1.4em; background: linear-gradient(89.81deg, #9845E8 -1.72%, #33D2FF 54.05%, #DD5789 99.78%);
         -webkit-background-clip: text;
