--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -14,13 +14,30 @@
         <div>
           <!-- <h2>Eu sou</h2> -->
         </div>
-        <div style="-webkit-text-stroke: 1px black; font-size: 1.4em; background: linear-gradient(89.81deg, #9845E8 -1.72%, #33D2FF 54.05%, #DD5789 99.78%);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        background-clip: text;
-        font-weight: 600;">
-          <h2>
-            {{nomeMotrar.length ? nomeMotrar : palavrasMotrar ? palavrasMotrar : "&nbsp;"}}
+        <div
+          style="
+            -webkit-text-stroke: 1px black;
+            font-size: 1.4em;
+            background: linear-gradient(
+              89.81deg,
+              #9845e8 -1.72%,
+              #33d2ff 54.05%,
+              #dd5789 99.78%
+            );
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            font-weight: 600;
+          "
+        >
+          <h2 class="text-welcome">
+            {{
+              nomeMotrar.length
+                ? nomeMotrar
+                : palavrasMotrar
+                ? palavrasMotrar
+                : "&nbsp;"
+            }}
           </h2>
         </div>
       </div>
@@ -30,9 +47,17 @@
     </div>
   </section>
   <div class="social_medias">
-    <button class="buttonLinkedin"> <a class="logos" href="https://www.linkedin.com/in/weesleylima/" target="_blank"><i class="ph ph-linkedin-logo linkedin"></i></a></button>
-    <button class="buttonGithub"> <a class="logos" href="https://github.com/weesleycabral" target="_blank"><i class="ph ph-github-logo github"></i></a></button>
-   <button class="buttonEmail"> <a class="logos" href="mailto:weesleylima@hotmail.com"><i class="ph ph-at email"></i></a></button>
-
+    <a
+      class="logos"
+      href="https://www.linkedin.com/in/weesleylima/"
+      target="_blank"
+      ><i class="ph ph-linkedin-logo linkedin"></i
+    ></a>
+    <a class="logos" href="https://github.com/weesleycabral" target="_blank"
+      ><i class="ph ph-github-logo github"></i
+    ></a>
+    <a class="logos" href="mailto:weesleylima@hotmail.com"
+      ><i class="ph ph-at email"></i
+    ></a>
   </div>
 </body>
