--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,6 @@ body {
   width: 100vw;
   overflow: hidden;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
