--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,21 +1,16 @@
-<body>
+<body style="width: 100%;">
   <section>
     <div>
       <!-- <h2 class="msg">Olá!</h2> -->
-      <div
-        style="
-          display: flex;
-          justify-content: center;
-          flex-direction: column;
-          text-align: center;
+      <div style="
           margin-top: 5em;
-        "
-      >
-        <div>
+        ">
+        <div class="name-text">
           <!-- <h2>Eu sou</h2> -->
+          <h1 style="font-size: 2.2rem; margin: 0; font-weight: 500">Wesley Lima</h1>
+          <p class="desc">Frontend Developer</p>
         </div>
-        <div
-          style="
+        <!-- <div style="
             -webkit-text-stroke: 1px black;
             font-size: 1.4em;
             background: linear-gradient(
@@ -28,36 +23,28 @@
             -webkit-text-fill-color: transparent;
             background-clip: text;
             font-weight: 600;
-          "
-        >
+          ">
           <h2 class="text-welcome">
             {{
-              nomeMotrar.length
-                ? nomeMotrar
-                : palavrasMotrar
-                ? palavrasMotrar
-                : "&nbsp;"
+            nomeMotrar.length
+            ? nomeMotrar
+            : palavrasMotrar
+            ? palavrasMotrar
+            : "&nbsp;"
             }}
           </h2>
-        </div>
+        </div> -->
       </div>
     </div>
     <div>
       <!-- <h2 class="msg2">I'm <span class="tw">Front-End Developer</span> </h2> -->
     </div>
   </section>
-  <div class="social_medias">
-    <a
-      class="logos"
-      href="https://www.linkedin.com/in/weesleylima/"
-      target="_blank"
-      ><i class="ph ph-linkedin-logo linkedin"></i
-    ></a>
-    <a class="logos" href="https://github.com/weesleycabral" target="_blank"
-      ><i class="ph ph-github-logo github"></i
-    ></a>
-    <a class="logos" href="mailto:weesleylima@hotmail.com"
-      ><i class="ph ph-at email"></i
-    ></a>
-  </div>
+  <!-- <div class="social_medias">
+    <a class="logos" href="https://www.linkedin.com/in/weesleylima/" target="_blank"><i
+        class="ph ph-linkedin-logo linkedin"></i></a>
+    <a class="logos" href="https://github.com/weesleycabral" target="_blank"><i
+        class="ph ph-github-logo github"></i></a>
+    <a class="logos" href="mailto:weesleylima@hotmail.com"><i class="ph ph-at email"></i></a>
+  </div> -->
 </body>
