--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -7,9 +7,6 @@
 section {
   color: white;
   position: relative;
-  padding-top: 200px;
-  width: 850px;
-  padding: 15px;
   border-radius: 10px;
   margin: auto;
 }
@@ -30,17 +27,14 @@ section {
 
 .social_medias {
   color: white;
-  display: flex;
-  justify-content: center;
-  padding-top: 150px;
-  column-gap: 2rem
+  padding-top: 60px;
 }
 
 .linkedin,
 .github,
 .email {
-  padding-left: 0.7em;
-  font-size: 3.75rem;
+  padding-left: 0.2em;
+  font-size: 2.75rem;
 }
 
 .logos:hover {
@@ -49,7 +43,7 @@ section {
 }
 
 .logos {
-  padding-right: 50px;
+  padding-right: 15px;
   text-decoration: none;
   color: white;
 }
@@ -102,3 +96,18 @@ section {
 .text-welcome {
   font-size: 2rem;
 }
+
+.desc {
+  font-size: 0.9rem;
+  font-weight: 500;
+  background-image: linear-gradient(90deg,#1978f3,#9ff9ff);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin: 6px;
+}
+
+.name-text {
+  text-align: center;
+}
+
