feat: change the width in about me text

--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -14,3 +14,10 @@
   background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+@media (max-width: 800px) {
+  .container {
+    width: 100%;
+  }
+}
+
