--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,22 +1,24 @@
 <div class="container">
   <div>
     <span class="welcome"
-      >Meu nome é Wesley, tenho 23 anos e sou
-      <span class="tech">Desenvolvedor Front-End</span></span
+      >Seja bem-vindo, meu nome é Wesley tenho 23 anos e sou
+      <span class="tech">Desenvolvedor Fullstack</span>.</span
     >
   </div>
 
   <div>
     <span class="welcome">
-      Atualmente, as tecnologias que utilizo é <span class="tech">Angular</span> e
-      <span class="tech">Flutter</span>. Também tenho conhecimento em: <br>
+      Atualmente, as tecnologias que tenho <span class="tech">conhecimento</span> são:
     </span>
     <br><br>
     <span class="tech">->&nbsp;</span><span class="welcome">HTML</span> <br>
     <span class="tech">->&nbsp;</span><span class="welcome">CSS</span> <br>
+    <span class="tech">->&nbsp;</span><span class="welcome">Angular</span> <br>
     <span class="tech">->&nbsp;</span><span class="welcome">Javascript</span> <br>
     <span class="tech">->&nbsp;</span><span class="welcome">Typescript</span> <br>
-    <span class="tech">->&nbsp;</span><span class="welcome">MySQL</span> <br>
-    <span class="tech">->&nbsp;</span><span class="welcome">Git</span>
+    <span class="tech">->&nbsp;</span><span class="welcome">Java</span> <br>
+    <span class="tech">->&nbsp;</span><span class="welcome">Spring Boot</span> <br>
+    <span class="tech">->&nbsp;</span><span class="welcome">Flutter/Dart</span> <br>
+    <span class="tech">->&nbsp;</span><span class="welcome">Google Firebase</span> <br>
   </div>
 </div>
