--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,7 +8,7 @@
         <div class="name-text">
           <!-- <h2>Eu sou</h2> -->
           <h1 style="font-size: 2.2rem; margin: 0; font-weight: 500">Wesley Lima</h1>
-          <p class="desc">Frontend Developer</p>
+          <p class="desc">Fullstack Developer</p>
         </div>
         <!-- <div style="
             -webkit-text-stroke: 1px black;
