feat: Add Projects component and update routing

--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -17,11 +17,7 @@
 
   <nav class="navbar">
     <!-- LOGO -->
-    <i
-      routerLink=""
-      style="font-size: 2rem; cursor: pointer"
-      class="ph-bold ph-house icon"
-    ></i>
+    <i routerLink="" style="font-size: 2rem; cursor: pointer" class="ph-bold ph-house icon"></i>
 
     <!-- NAVIGATION MENU -->
     <ul class="nav-links">
@@ -30,7 +26,7 @@
       <!-- NAVIGATION MENUS -->
       <div class="menu">
         <li><a class="about" routerLink="about">Sobre mim</a></li>
-        <li><a class="projects">Projetos</a></li>
+        <li><a class="projects" routerLink="projects">Projetos</a></li>
       </div>
     </ul>
   </nav>
