--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,1 +1,28 @@
-<p>projects works!</p>
+<!-- Card Grid -->
+<div
+  class="grid grid-cols-1 lg:grid-cols-3 items-center border border-neutral-700 divide-y lg:divide-y-0 lg:divide-x divide-neutral-700 rounded-xl">
+  <!-- Card -->
+  <a *ngFor="let project of projects"
+    class="group relative z-10 p-4 md:p-6 h-full flex flex-col bg-neutral-900 focus:outline-none first:rounded-t-xl last:rounded-b-xl lg:first:rounded-l-xl lg:first:rounded-tr-none lg:last:rounded-r-xl lg:last:rounded-bl-none before:absolute before:inset-0 before:bg-gradient-to-b before:hover:from-transparent before:hover:via-transparent before:hover:to-[#ff0]/10 before:via-80% before:focus:from-transparent before:focus:via-transparent before:focus:to-[#ff0]/10 before:-z-[1] before:last:rounded-b-xl lg:before:first:rounded-s-xl lg:before:last:rounded-e-xl lg:before:last:rounded-bl-none before:opacity-0 before:hover:opacity-100 before:focus:opacity-100"
+    href="#">
+    <div class="mb-5">
+      <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 256 256">
+        <path [attr.d]="project.icon" [attr.fill]="project.iconColor">
+        </path>
+      </svg>
+      <div class="mt-5">
+        <p class="font-semibold text-3xl text-white">{{ project.title }}</p>
+        <p class="mt-1 text-neutral-400">{{ project.subtitle }}</p>
+        <!-- <p class="mt-1 text-neutral-400">{{ project.description }}</p> -->
+      </div>
+    </div>
+    <p class="mt-auto">
+      <a [href]="project.linkGithub" target="_blank" rel="noopener noreferrer"
+        class="font-medium text-sm text-[#5EBBF9] pb-1 border-b-2 border-neutral-700 group-hover:border-[#5EBBF9] group-focus:border-[#5EBBF9] transition focus:outline-none">
+        Ir para repositório
+      </a>
+    </p>
+  </a>
+  <!-- End Card -->
+</div>
+<!-- End Card Grid -->
