Update welcome message in about.component.html and fix project card link in projects.component.html

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,9 +1,7 @@
 <div class="container">
   <div>
-    <span class="welcome"
-      >Seja bem-vindo, meu nome é Wesley tenho 23 anos e sou
-      <span class="tech">Desenvolvedor Fullstack</span>.</span
-    >
+    <span class="welcome">Seja bem-vindo, meu nome é Wesley tenho 24 anos e sou
+      <span class="tech">Desenvolvedor Fullstack</span>.</span>
   </div>
 
   <div>
