--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -4,16 +4,17 @@
   <!-- Card -->
   <a *ngFor="let project of projects"
     class="group relative z-10 p-4 md:p-6 h-full flex flex-col bg-neutral-900 focus:outline-none first:rounded-t-xl last:rounded-b-xl lg:first:rounded-l-xl lg:first:rounded-tr-none lg:last:rounded-r-xl lg:last:rounded-bl-none before:absolute before:inset-0 before:bg-gradient-to-b before:hover:from-transparent before:hover:via-transparent before:hover:to-[#fff]/10 before:via-80% before:focus:from-transparent before:focus:via-transparent before:focus:to-[#fff]/10 before:-z-[1] before:last:rounded-b-xl lg:before:first:rounded-s-xl lg:before:last:rounded-e-xl lg:before:last:rounded-bl-none before:opacity-0 before:hover:opacity-100 before:focus:opacity-100">
-    <div class="mb-5">
-      <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 256 256">
-        <path [attr.d]="project.icon" [attr.fill]="project.iconColor">
-        </path>
-      </svg>
-      <div class="mt-5">
-        <p class="font-semibold text-3xl text-white">{{ project.title }}</p>
-        <p class="mt-1 text-neutral-400">{{ project.subtitle }}</p>
-        <!-- <p class="mt-1 text-neutral-400">{{ project.description }}</p> -->
+    <div class="mb-5 flex space-x-4">
+      <div *ngFor="let icon of project.icons" class="shrink-0 w-8 h-8">
+        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 256 256">
+          <path [attr.d]="icon.path" [attr.fill]="icon.color"></path>
+        </svg>
       </div>
+    </div>
+    <div class="mt-5">
+      <p class="font-semibold text-3xl text-white">{{ project.title }}</p>
+      <p class="mt-1 text-neutral-400">{{ project.subtitle }}</p>
+      <!-- <p class="mt-1 text-neutral-400">{{ project.description }}</p> -->
     </div>
     <p class="mt-auto">
       <a [href]="project.linkGithub" target="_blank" rel="noopener noreferrer"
